Added views for creating and editing todos

--- a/list/templates/list/todo_list.html
+++ b/list/templates/list/todo_list.html
@@ -1,20 +1,10 @@
-{% load staticfiles %}
+{% extends 'list/base.html'%}
 
-<html>
-<head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-  <link rel="stylesheet" href="{% static 'css/list.css' %}">
-</head>
-<body>
-  <div class="col-lg-12">
-    <h1><a href="/">So much to do</a></h1>
+{% block content %}
     {% for todo in todos%}
         <p class="bg-info">
-          <b><a href="">{{ todo.title }}</a></b> <code>by {{ todo.deadline_date }}</code>
+          <b><a href="{% url 'todo_detail' pk=todo.pk %}">{{ todo.title }}</a></b> <code>by {{ todo.deadline_date }}</code>
           {{ todo.text|linebreaksbr }}
       </p>
     {% endfor %}
-  </div>
-</body>
-<html>
+{% endblock %}
