--- a/list/static/css/custom.css
+++ b/list/static/css/custom.css
@@ -10,51 +10,9 @@ body {
     float: right;
 }
 
-/* Since positioning the image, we need to help out the caption */
-.carousel-row{
-    padding-top: 1em;
-    padding-bottom: 1em;
-}
 
-.carousel{
-    padding-bottom: 1em;
-}
 
-/* Declare heights because of positioning of img element */
-.carousel-item {
-    height: 32rem;
-    background-color: #777;
-}
-.carousel-item > img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-width: 100%;
-    height: 32rem;
-}
-
-.carousel-indicators {
-    top: 1.5rem;
-    right: 1.5rem;
-    bottom: auto;
-    left: auto;
-    width: 1rem;
-    margin-left: 0;
-}
-
-.carousel-indicators > li {
-    margin-bottom: .25rem;
-}
-
-@media (min-width: 40em) {
-    /* Bump up size of carousel content */
-    .carousel-caption p {
-        margin-bottom: 1.25rem;
-        font-size: 1.25rem;
-        line-height: 1.4;
-    }
-
-    .featurette-heading {
+.featurette-heading {
         font-size: 50px;
     }
 }
@@ -65,20 +23,50 @@ body {
     }
 }
 
+.headimg.img1{
+    margin: 5px;
+    width: 50px;
+    height: 50px;
+    float: left;
+}
 
-/* Center align the text within the three columns below the carousel */
-.marketing .col-lg-4 {
-    margin-top:1.5rem;
-    margin-bottom: 1.5rem;
-    text-align: center;
+.headimg.img2{
+    margin: 5px;
+    width: 50px;
+    height: 50px;
+    float: right;
 }
-.marketing h2 {
-    font-weight: normal;
+.headimg.img3{
+    margin: 5px;
+    width: 50px;
+    height: 50px;
 }
-.marketing .col-lg-4 p {
-    margin-right: .75rem;
-    margin-left: .75rem;
+.headimg.img4{
+    margin: 5px;
+    width: 50px;
+    height: 50px;
 }
+
+.gamebtn{
+  float: right;
+}
+
+.page_title{
+  text-align: center;
+  vertical-align: bottom;
+}
+
+.infobar{
+  height: inherit;
+  background-color: black;
+  opacity: 0.5;
+  height: 45%;
+}
+
+.info{
+  color: white; 
+}
+
 
 
 /* Featurettes
@@ -148,7 +136,7 @@ h1{
 }
 
 h2{
-    color: darkslateblue;
+    color: whitesmoke;
 }
 .dunno {
     color: white;
@@ -187,6 +175,8 @@ footer {
 }
 
 
+
+
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 992px) {
     .sidenav {
@@ -221,7 +211,6 @@ footer {
     margin: 0px;
     width: 20px;
     height: 20px;
-    display: block;
 }
 
 .home-button-actual {
