--- a/list/templates/list/gameinstance_list_user.html
+++ b/list/templates/list/gameinstance_list_user.html
@@ -11,7 +11,7 @@
     <div class="content container">
           <div class="row">
               <div class="col-md-8">
-                <h1>Your Library <a href="{% url 'game_add' %}" class="btn-primary btn gamebtn"><img class="home-button" src="{% static 'resources/re2.png' %}" /> Add a Game</a></h1>
+                <h1>Your Library <h2>Click items for more info</h2><a href="{% url 'game_add' %}" class="btn-primary btn gamebtn"><img class="home-button" src="{% static 'resources/re2.png' %}" /> Add a Game</a></h1>
 
                 {% if gameinstance_list %}
                 <ul>
@@ -26,11 +26,11 @@
                 {% else %}
                   <p>There are no games in your library.</p>
                 {% endif %}
-  
+
               </div>
               <div class="col-md-3 infobar">
                 <h2 class="page_title">Game Info:</h2>
-                <div class="info">Title:<p id="infoptitle"></p></div>
+                <div class="info">Title:<p id="infopname"></p></div>
                 <div class="info">Summary:</div>
                 <p id="infopsum"></p>
                 <div class="info">Release date:<p id="infopdate"></p></div>
