--- a/list/templates/list/game_add.html
+++ b/list/templates/list/game_add.html
@@ -10,11 +10,13 @@
                         <div class="login-dark" id="noback">
                             <form id="nobackform" method="POST" action".">
                               {% csrf_token %}
-                                <h2 class="sr-only">Add Game</h2>
+                              <div class="form-group">
+                                <h4>Add Game</h4>
+                                </div>
 
                                 <div class="form-group">
 
-                                    <input id="id_title" type="text" name="title" placeholder="Title" class="form-control" required />
+                                <input id="id_title" type="text" name="title" placeholder="Title" class="form-control" required />
 
                                 </div>
 
